V 1.8: Updated jquery to 3.7.0 (security fix). Increased chart line width ("borderWidth") from 1 to 2.        Chart.js update still needs to wait (breaking changes between V 2, 3 and 4).

--- a/Distance_Monitor_US100/data/index_header.html
+++ b/Distance_Monitor_US100/data/index_header.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <title>CMU Physics Lab Data Logger</title>
-<script src="./jquery-3.3.1.min.js"></script>
+<script src="./jquery-3.7.0.min.js"></script>
+<!--<script src="chart.min.js"></script>-->
 <script src="Chart.bundle.min.js"></script>
 
 <script>
